--- a/checkversionviteplugin/package.json
+++ b/checkversionviteplugin/package.json
@@ -1,11 +1,14 @@
 {
   "name": "rollup-plugin-check-version",
-  "version": "1.0.0",
-  "description": "version check to reload html, for vite project",
+  "version": "1.0.1",
+  "description": "version check to reload html, for vite project. Use config hook of vite.",
   "main": "./dist/index.js",
   "scripts": {
     "build": "rollup index.js --file ./dist/index.js --format umd --name rollup-plugin-check-version"
   },
+  "keywords": [
+    "vite-plugin"
+  ],
   "author": "jiarongdeng",
   "repository": "https://github.com/dengjiarong1225/rollup-plugin-check-version",
   "license": "MIT",
